[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "by_getattr"
version = "0.1.0"
authors = [
    {name = "Eliah Kagan", email = "degeneracypressure@gmail.com"},
]
description = "Package that gets its __version__ dynamically with __getattr__"
readme = "README.md"
requires-python = ">= 3.7"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]
dependencies = [
    "importlib_metadata >=6.7, <6.8 ; python_version < '3.8'",
    "typing-extensions >=4.7, <4.8 ; python_version < '3.8'",
]

[project.optional-dependencies]
test = [
    "pytest >=8, <9 ; python_version >= '3.8'",
    "pytest >=7, <8 ; python_version < '3.8'",
]
lint = [
    "ruff >=0.2, <1",
]
typecheck = [
    "by_getattr[test]",
    "mypy >=1, <2",
    "pyright >=1, <2",
]
dev = [
    "by_getattr[test]",
    "by_getattr[lint]",
    "by_getattr[typecheck]",
]

[project.scripts]
hello = "by_getattr:hello"

[tool.ruff.lint]
extend-select = ["E", "F", "W", "I", "S"]
ignore = ["S101", "S603"]
