[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "by_literal"
dynamic = ["version"]
authors = [
    {name = "Eliah Kagan", email = "degeneracypressure@gmail.com"},
]
description = "Package that gets its __version__ by defining it in code"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = ["Programming Language :: Python :: 3"]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest >=8,<9 ; python_version >= '3.8'",
    "pytest >=7,<8 ; python_version < '3.8'",
]
lint = [
    "ruff >=0.2,<1",
]
typecheck = [
    "by_literal[test]",
    "mypy >=1,<2",
    "pyright >=1,<2",
]
dev = [
    "by_literal[test,lint,typecheck]",
]

[project.scripts]
hello = "by_literal:hello"

[tool.setuptools.dynamic]
version = {attr = "by_literal.__version__"}

[tool.ruff.lint]
extend-select = ["E", "F", "W", "I", "S"]
ignore = ["S101", "S603"]
